fix grammar error, and make the text-align left for skills-description

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -381,6 +381,7 @@ ul li{
 	}
 
 	.skill-description{
+		text-align:left;
 		font-size:1.5rem;
 		width:35rem;
 		font-weight:200;
@@ -438,6 +439,7 @@ ul li{
 	}
 
 	.skill-description{
+		text-align:left;
 		font-size:1.2rem;
 		width:42rem;
 		font-weight:200;
@@ -493,6 +495,7 @@ ul li{
 	}
 
 	.skill-description{
+		text-align:left;
 		font-size:1.2rem;
 		width:30rem;
 		font-weight:200;
